# data_week2

./: README.md  pyproject.toml  requirements.txt  show_analytics_schema.py  simplified_helpers_example.py  verify_day3.py  verify_task6.py
data/processed/: analytics_table.parquet  order.parquet  orders.parquet  orders_clean.parquet  users.parquet
data/raw/: orders.csv  users.csv
notebooks/: eda.ipynb  schema_validation.ipynb
reports/: missingness_orders.csv  missingness_orders.md  revenue_by_country.csv
scripts/: create_orders.py  day4_bootstrap_exercise.py  generate_messy_data.py  main.py  process_orders.py  read_parquet.py  run_data1_load.py  run_day2_clean.py  run_day3_build_analytics.py  test_dedupe.py  test_missingness.py  test_text_normalization.py
src/bootcamp_data/: __init__.py  bootstrap.py  config.py  io.py  joins.py  quality.py  transforms.py
