[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bootcamp-data"
version = "0.1.0"
description = "Bootcamp data processing project"
requires-python = ">=3.11"
authors = [
    {name = "Developer", email = "dev@example.com"}
]
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "asttokens==3.0.1",
    "attrs==25.4.0",
    "beautifulsoup4==4.14.3",
    "bleach==6.3.0",
    "choreographer==1.2.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "executing==2.2.1",
    "fastjsonschema==2.21.2",
    "iniconfig==2.3.0",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "jupyterlab-pygments==0.3.0",
    "kaleido==1.2.0",
    "logistro==2.0.1",
    "markupsafe==3.0.3",
    "matplotlib-inline==0.2.1",
    "mistune==3.2.0",
    "narwhals==2.14.0",
    "nbclient==0.10.4",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "numpy==2.4.0",
    "orjson==3.11.5",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandocfilters==1.5.1",
    "parso==0.8.5",
    "platformdirs==4.5.1",
    "plotly==6.5.0",
    "pluggy==1.6.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.3",
    "pure-eval==0.2.3",
    "pyarrow==22.0.0",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-timeout==2.4.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "rpds-py==0.30.0",
    "simplejson==3.20.2",
    "six==1.17.0",
    "soupsieve==2.8.1",
    "stack-data==0.6.3",
    "tinycss2==1.4.0",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "wcwidth==0.2.14",
    "webencodings==0.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
]

[tool.setuptools]
packages = ["bootcamp_data"]

[tool.setuptools.package-dir]
"" = "src"
